# browser-manager

./: .gitignore  BUILD  BUILD.bazel  Cargo.toml  LICENSE  README.md  WORKSPACE
.github/workflows/: rust.yml
src/: browser.rs  lib.rs  main.rs  scraper.rs
