[package]
name = "browser-manager"
version = "0.1.0"
authors = ["David Burns <david.burns@theautomatedtester.co.uk>"]
edition = "2018"

[dependencies]
which = "~4.0"
directories = "~2.0"
clap = "~2.33"
zip = "~0.5"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.19"
tar = "0.4.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
