[package]
name = "browser-manager"
version = "0.1.0"
authors = ["David Burns <david.burns@theautomatedtester.co.uk>"]
edition = "2018"

[dependencies]
clap = "~2.33"
directories = "~2.0"
flate2 = "1.0.19"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.32"
which = "~4.0"
zip = "~0.5"
